--- a/mini_project3/src/App.css
+++ b/mini_project3/src/App.css
@@ -7,6 +7,10 @@
   width: 100vw;
   height: 100vh;
   background-color: rgb(30, 30, 66);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
  
 }
 
@@ -15,7 +19,13 @@
   height: 10vh;
   background-color: rgb(12, 12, 48);
   color: white;
+  font-size: 15px;
+  font-family: cursive;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.Navbar{
+
 }
